# clone-talk

./: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  replit.md  test_chat.txt
attached_assets/: KakaoTalk_20260107_1436_05_860_축의금축내는놈_1767764207255.txt  Pasted--Replit-Last-Talk-txt--1767763692721_1767763692723.txt  Pasted-ERROR-Exception-in-ASGI-application-Traceback-most-rece_1768023069288.txt  Pasted-use-kakao-api-ts-37-GET-https-712ffb18-67f2-416f-ba84-f_1767765921898.txt
backend/: __init__.py  chat.py  main.py  models.py  parser.py  prompts.py  pyproject.toml  requirements.txt
backend/script/: build.ts
backend/server/: index.ts  routes.ts  static.ts  storage.ts  vite.ts
backend/shared/: routes.ts  schema.ts
backend/tests/: test_pipeline.py  test_upload_manual.py
client/: requirements.md
client/src/: App.tsx  index.css
client/src/components/: ChatBubble.tsx  Layout.tsx
client/src/hooks/: use-kakao-api.ts
client/src/pages/: Chat.tsx  Home.tsx  Processing.tsx  Review.tsx
config/: components.json  drizzle.config.ts  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
data/chroma/: chroma.sqlite3
docs/: README.md  docker.md  flow.md  gcp-vm.md  replit.md  structure.md  system-diagram.md  venv.md
front/: index.html  requirements.md
front/src/: App.tsx  index.css
front/src/components/: Layout.tsx
front/src/hooks/: use-kakao-api.ts  use-toast.ts
front/src/pages/: Chat.tsx  Home.tsx  Processing.tsx  Review.tsx  (+2 more)
server/: index.ts  routes.ts
shared/: routes.ts  schema.ts
(+9 files in other folders)
